<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="app_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer_bt">Spotify Streamer</string>
    <string name="scores_app_bt">Scores App</string>
    <string name="library_app_bt">Library App</string>
    <string name="build_it_bigger_bt">Build It Bigger</string>
    <string name="xyz_reader_bt">XYZ Reader</string>
    <string name="capstone_bt">Capstone: My Own App</string>

</resources>
