<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_title"
        android:textSize="23sp" />

    <Button
        android:id="@+id/spotify_streamer_bt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:background="@color/accent"
        android:text="@string/spotify_streamer_bt" />

    <Button
        android:id="@+id/scores_app_bt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spotify_streamer_bt"
        android:layout_below="@+id/spotify_streamer_bt"
        android:layout_marginTop="5dp"
        android:background="@color/accent"
        android:text="@string/scores_app_bt" />

    <Button
        android:id="@+id/library_app_bt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scores_app_bt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/accent"
        android:text="@string/library_app_bt" />

    <Button
        android:id="@+id/build_it_bigger_bt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/library_app_bt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/accent"
        android:text="@string/build_it_bigger_bt" />

    <Button
        android:id="@+id/xyz_reader_bt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/build_it_bigger_bt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/accent"
        android:text="@string/xyz_reader_bt" />

    <Button
        android:id="@+id/capstone_bt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xyz_reader_bt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/accent_dark"
        android:text="@string/capstone_bt" />

</RelativeLayout>
